--- a/layouts/index.html
+++ b/layouts/index.html
@@ -2,6 +2,7 @@
 <html lang="{{ .Site.LanguageCode }}">
     {{ partial "head.html" . }}
     <body>
+        {{ partial "hero.html" . }}
         <p>Modern Tattoo theme</p>
 
         {{ partial "footer.html" . }}
