Added about section

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -3,8 +3,7 @@
     {{ partial "head.html" . }}
     <body>
         {{ partial "hero.html" . }}
-        <p>Modern Tattoo theme</p>
-
+        {{ partial "aboutus.html" .Site.Data.about }}
         {{ partial "footer.html" . }}
         {{ partial "venderscripts.html" . }}
     </body>
