--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,6 +1,23 @@
+$header-font: 'Cormorant Garamond', serif; 
+$regular-font: 'Montserrat', sans-serif;
+
+@mixin header {
+    font-family: $header-font; 
+    font-weight: bold;
+}
+
+
 html, body {
   background: #fff;
-  font-family: futura-pt,'BlinkMacSystemFont',-apple-system,'Roboto','Lucida Sans';
+  font-family: $regular-font;
+}
+
+p {
+    font-size: 14px;
+}
+
+h1, h2, h3 {
+    @include header;
 }
 
 .hero-area {
@@ -23,6 +40,8 @@ html, body {
     transform: translateY(-50%) translateX(-50%);
     padding: 25px 75px;
     background: #fff;
+    box-shadow: 0px 0px 3px 0px #666;
+    border-radius: 1px;
 
     .content {
       position: relative;
@@ -31,6 +50,14 @@ html, body {
       text-align: center;
     }
   }
+}
+
+.container.about-us {
+    margin: 50px auto;
+
+    .about-info {
+        h2 { text-align: center; }
+    }
 }
 
 .test {
