--- a/layouts/partials/head.html
+++ b/layouts/partials/head.html
@@ -8,6 +8,9 @@
     <!-- Bootstrap includes -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">    
     
+    <!-- Google fonts -->
+    <link href="https://fonts.googleapis.com/css?family=Cormorant+Garamond:400,700|Montserrat&display=swap" rel="stylesheet">
+
     <!-- Our includes -->
     {{ $style := resources.Get "sass/main.scss" | resources.ToCSS }}
     <link rel="stylesheet" href="{{ $style.Permalink }}">
