--- a/layouts/index.html
+++ b/layouts/index.html
@@ -4,6 +4,8 @@
     <body>
         {{ partial "hero.html" . }}
         {{ partial "aboutus.html" .Site.Data.about }}
+        {{ partial "artists.html" . }}
+        {{ partial "gallery.html" .Site.Data.gallery }}
         {{ partial "footer.html" . }}
         {{ partial "venderscripts.html" . }}
     </body>
