--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -4,8 +4,8 @@ $regular-font: 'Montserrat', sans-serif;
 @mixin header {
     font-family: $header-font; 
     font-weight: bold;
+    font-size: 2.5rem;
 }
-
 
 html, body {
   background: #fff;
@@ -13,12 +13,16 @@ html, body {
 }
 
 p {
-    font-size: 14px;
+    font-size: 16px;
+    color: #333;
+    line-height: 25px;
 }
 
 h1, h2, h3 {
     @include header;
 }
+
+@import 'gallery';
 
 .hero-area {
   position: relative;
@@ -55,9 +59,18 @@ h1, h2, h3 {
 .container.about-us {
     margin: 50px auto;
 
-    .about-info {
-        h2 { text-align: center; }
+    .about-info h2 { 
+        text-align: center; 
+        color: #333;
     }
+    .about-img { 
+        img { max-height: 300px; } 
+        text-align: center; 
+    }
+}
+
+.container.artists {
+    background: #333;
 }
 
 .test {
