--- a/layouts/partials/aboutus.html
+++ b/layouts/partials/aboutus.html
@@ -1,11 +1,11 @@
 <div class="container about-us">
     <div class="row">
-        <div class="about-info my-auto col-md-6">
+        <div class="about-info my-auto col-md-6 col-sm-5 offset-sm-1 offset-md-0">
             <h2> About Us </h2>
             <p>{{ .AboutText }}</p>
         </div>
-        <div class="col-md-6">
-            <img class="img-fluid" src="{{ .AboutImage }}" />
+        <div class="about-img col-md-6 col-sm-5 offset-sm-1 offset-md-0">
+            <img class="about-img img-fluid" src="{{ .AboutImage }}" />
         </div>
     </div>
 </div>
