--- a/assets/sass/gallery.scss
+++ b/assets/sass/gallery.scss
@@ -1,10 +1,24 @@
+$gallerybackground: #0f0f0f;
+
 .gallery-header {
     text-align: center;
+    padding: 25px 0 25px 0;
+
+    h2 { margin: 0; }
+
+    &.dark {
+        background: $gallerybackground;
+        color: #fff;
+    }
+
+    &.dark + .gallery-content {
+        padding: 0px 5px 50px 5px;
+    }
 }
 
 .gallery-content {
     padding: 50px 5px;
-    background: #0f0f0f;
+    background: $gallerybackground;
 
 	.gallery {
       -webkit-column-count: 4;
@@ -13,7 +27,6 @@
       -webkit-column-gap: 10px;
       -moz-column-gap: 10px;
       column-gap: 10px;
-      margin-top: 10px;
       overflow: hidden;
     }
 
