--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,6 +6,7 @@
         {{ partial "aboutus.html" .Site.Data.about }}
         {{ partial "artists.html" . }}
         {{ partial "gallery.html" .Site.Data.gallery }}
+        {{ partial "testimonials.html" . }}
         {{ partial "footer.html" . }}
         {{ partial "venderscripts.html" . }}
     </body>
