--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -13,7 +13,7 @@ html, body {
 }
 
 p {
-    font-size: 16px;
+    font-size: 1rem;
     color: #333;
     line-height: 25px;
 }
@@ -70,24 +70,37 @@ h1, h2, h3 {
 }
 
 .container-fluid.testimonials {
-    margin: 50px auto;
+    margin: 35px 0 85px 0;
 
     h1 {
         text-align: center;
-        margin-bottom: 50px;
+        margin-bottom: 25px;
     }
 
-    #testimonialcarousel {
-        .testimonial h3 {
+    .date {
+        color: #666;
+        font-size: 1rem;
+    }
+
+    .carousel-indicators {
+        bottom: -30px;
+        margin-bottom: 0;
+
+        li { background: #aaa; }
+        .active { background: #333; }
+    }
+
+    .testimonial  {
+        text-align: center;
+
+        h3 {
             font-size: 2rem;
         }
 
-        .testimonial p {
+        p {
             margin-bottom: 5px;
-        }
-
-        .testimonial {
-            text-align: center;
+            max-width: 50%;
+            margin: auto;
         }
     }
 }
