--- a/layouts/partials/testimonials.html
+++ b/layouts/partials/testimonials.html
@@ -2,6 +2,11 @@
     <div class="col-sm-10 offset-sm-1">
         <h1>Testimonials</h1>
           <div id="testimonialcarousel" class="carousel slide" data-ride="carousel">
+		  <ol class="carousel-indicators">
+			<li data-target="#testimonialcarousel" data-slide-to="0" class="active"></li>
+			<li data-target="#testimonialcarousel" data-slide-to="1"></li>
+			<li data-target="#testimonialcarousel" data-slide-to="2"></li>
+		  </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
                 <div class="testimonial">
@@ -25,14 +30,6 @@
                 </div>
             </div>
           </div>
-          <a class="carousel-control-prev" href="#testimonialcarousel" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#testimonialcarousel" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
         </div>
     </div>
 </div>
