updated style of nav for artists page

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -5,6 +5,7 @@ $regular-font: 'Montserrat', sans-serif;
     font-family: $header-font; 
     font-weight: bold;
     font-size: 2.5rem;
+    text-align: center;
 }
 
 html, body {
@@ -16,6 +17,7 @@ p {
     font-size: 1rem;
     color: #333;
     line-height: 25px;
+    margin: 0;
 }
 
 h1, h2, h3 {
@@ -105,8 +107,37 @@ h1, h2, h3 {
     }
 }
 
-.container-fluid.artists {
-    background: #333;
+.container-fluid.artist-selector {
+    margin: 50px 0 25px 0;
+    nav {
+        text-align: center;
+
+        a { 
+            color: #000; 
+            outline: none;
+            transition: color .3s, box-shadow .3s;
+            font-size: 1.5rem;
+            padding: 5px 2px;
+            margin: 0px 10px;
+
+            box-shadow: inset 0 -0.2em #000;
+
+            &:hover { text-decoration: none; }
+        }
+
+        a.collapsed { 
+            color: #666; 
+            box-shadow: inset 0 -0.2em #666;
+        }
+    }
+}
+
+.container-fluid#artists {
+    background: #0f0f0f;
+    margin-bottom: 100px;
+    
+    * { color: #fff; } 
+
 }
 
 .container-fluid.footer {
