--- a/layouts/partials/artists.html
+++ b/layouts/partials/artists.html
@@ -1,7 +1,8 @@
 <div class="artist-selector container-fluid">
+    <h1> Our Artists </h1>
     <nav>
-        <a href="#matt" data-toggle="collapse" class="artist-link"> Matt </a>
-        <a href="#britta" data-toggle="collapse" class="artist-link collapsed"> Britta </a>
+        <a href="#matt" data-toggle="collapse" class="artist-link">Matt</a>
+        <a href="#britta" data-toggle="collapse" class="artist-link collapsed">Britta</a>
     </nav>
 </div>
 <div id="artists" class="container-fluid">
