--- a/layouts/index.html
+++ b/layouts/index.html
@@ -6,7 +6,7 @@
         {{ partial "aboutus.html" .Site.Data.about }}
         {{ partial "gallery.html" .Site.Data.gallery }}
         {{ partial "testimonials.html" .Site.Data.testimonials }}
-        {{ partial "artists.html" . }}
+        {{ partial "artists.html" .Site.Data.artists }}
         {{ partial "footer.html" . }}
         {{ partial "venderscripts.html" . }}
     </body>
