Added alt tag and centering to about us image

--- a/layouts/partials/aboutus.html
+++ b/layouts/partials/aboutus.html
@@ -4,8 +4,8 @@
             <h2> About Us </h2>
             <p>{{ .AboutText }}</p>
         </div>
-        <div class="about-img col-md-6 col-sm-5 offset-sm-1 offset-md-0">
-            <img class="about-img img-fluid" src="{{ .AboutImage }}" />
+        <div class="about-img col-md-6 col-sm-5 offset-sm-1 my-auto offset-md-0">
+            <img class="about-img img-fluid" src="{{ .AboutImage }}" alt="{{.AboutAlt}}" />
         </div>
     </div>
 </div>
