basic contact page

--- a/layouts/index.html
+++ b/layouts/index.html
@@ -7,6 +7,7 @@
         {{ partial "gallery.html" .Site.Data.gallery }}
         {{ partial "testimonials.html" .Site.Data.testimonials }}
         {{ partial "artists.html" .Site.Data.artists }}
+        {{ partial "contact.html" . }}
         {{ partial "footer.html" . }}
         {{ partial "venderscripts.html" . }}
     </body>
