--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -135,13 +135,59 @@ h1, h2, h3 {
 .container-fluid#artists {
     background: #0f0f0f;
     padding: 20px 30px;
-    margin-bottom: 100px; //TODO: remove this later
 
     .artist-gallery {
         padding: 1vw;
     }
     
     * { color: #fff; } 
+}
+
+.container-fluid.contact {
+    padding: 20px 30px;
+
+    .hours {
+        padding: 5px 30px;
+        margin-bottom: .5rem;
+    }
+    .hours .day-time {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-between;
+
+        .day, .hour { justify-content: space-between } 
+    }
+
+    .location {
+        flex-direction: column;
+        .address { padding: 5px 15px; }
+        iframe.map { 
+            width: 100%; 
+            height: 300px; 
+            position:relative; 
+        }
+    }
+
+    .contact-form {
+        .form-control:focus {
+            box-shadow: none;
+            border-color: #0f0f0f;
+        }
+
+        .form-control {
+            border-radius: 3px;
+        }
+
+        button { 
+            background: #0f0f0f;
+            color: #fff;
+            font-family: $header-font;
+            border-radius: 2px;
+            font-size: 1.5rem;
+            padding: 5px;
+            width: 100%;
+        }
+    }
 }
 
 .container-fluid.footer {
