--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -31,7 +31,7 @@
                 </div>
             </div>
         </div>
-        <div class="col-sm-6 offset-sm-0 col-lg-4 offset-lg-2">
+        <div class="col-sm-6 offset-sm-0 col-lg-4">
             {{ partial "contactform.html" . }}
         </div>
     </div>
