--- a/layouts/index.html
+++ b/layouts/index.html
@@ -8,6 +8,7 @@
         {{ partial "testimonials.html" .Site.Data.testimonials }}
         {{ partial "artists.html" .Site.Data.artists }}
         {{ partial "contact.html" . }}
+        {{ partial "faq.html" . }}
         {{ partial "footer.html" . }}
         {{ partial "venderscripts.html" . }}
     </body>
