--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -191,6 +191,22 @@ h1, h2, h3 {
     }
 }
 
+.container-fluid.faq {
+    padding: 20px 30px;
+
+    .question {
+        padding: 15px;
+
+        h6 {
+            font-weight: bold;
+        }
+
+        p {
+            margin-top: 10px;
+        }
+    }
+}
+
 .container-fluid.footer {
     height: 300px;
     background: #0f0f0f;
