--- a/layouts/partials/faq.html
+++ b/layouts/partials/faq.html
@@ -1,39 +1,17 @@
 <div class="container-fluid faq">
-    <div class="row">
+    <div class="header row">
         <div class="col-sm-10 offset-sm-1">
             <h1> FAQs </h1>
         </div>
     </div>
     <div class="row">
-        <div class="col-sm-6 col-xs-10 offset-xs-1 offset-sm-0 col-lg-4 offset-lg-2">
-            <div class="question">
-                <h6> How do I set up an appointment? </h6>
-                <p>
-                Coming into the shop and speaking to one of our artists is 
-                the best way to accomplish this. By going this route they ca
-                get a better idea of your ideas, give you a quote, take a deposit and schedule the appointment at the same time.
-                </p>
+        {{ range $index, $question := .Questions }}
+            <div class="col-sm-6 col-xs-10 offset-xs-1 offset-sm-0 col-lg-4 {{ (cond (eq (mod $index 2) 0) "offset-lg-2" "") }}">
+                <div class="question">
+                    <h6>{{ $question.Title }}</h6>
+                    <p>{{ $question.Question }}</p>
             </div>
         </div>
-        <div class="col-sm-6 col-xs-10 offset-xs-1 offset-sm-0 col-lg-4">
-            <div class="question">
-                <h6> How do I set up an appointment? </h6>
-                <p>
-                Coming into the shop and speaking to one of our artists is 
-                the best way to accomplish this. By going this route they ca
-                get a better idea of your ideas, give you a quote, take a deposit and schedule the appointment at the same time.
-                </p>
-            </div>
-        </div>
-        <div class="col-sm-6 col-xs-10 offset-xs-1 offset-sm-0 col-lg-4 offset-lg-2">
-            <div class="question">
-                <h6> How do I set up an appointment? </h6>
-                <p>
-                Coming into the shop and speaking to one of our artists is 
-                the best way to accomplish this. By going this route they ca
-                get a better idea of your ideas, give you a quote, take a deposit and schedule the appointment at the same time.
-                </p>
-            </div>
-        </div>
+        {{ end }}
     </div>
 </div>
