--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,5 +1,5 @@
 <div class="contact container-fluid">
-    <div class="row">
+    <div class="row header">
         <div class="col-sm-10 offset-sm-1">
             <h1> Contact Us </h1>
         </div>
