--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -1,5 +1,6 @@
 $header-font: 'Cormorant Garamond', serif; 
 $regular-font: 'Montserrat', sans-serif;
+$dark-background: #0f0f0f;
 
 @mixin header {
     font-family: $header-font; 
@@ -25,6 +26,7 @@ h1, h2, h3 {
 }
 
 @import 'gallery';
+@import 'contact';
 
 .hero-area {
   position: relative;
@@ -134,7 +136,7 @@ h1, h2, h3 {
 }
 
 .container-fluid#artists {
-    background: #0f0f0f;
+    background: $dark-background;
     padding: 20px 30px;
 
     .artist-gallery {
@@ -142,53 +144,6 @@ h1, h2, h3 {
     }
     
     * { color: #fff; } 
-}
-
-.container-fluid.contact {
-    padding: 20px 30px;
-
-    .hours {
-        padding: 5px 30px;
-        margin-bottom: .5rem;
-    }
-    .hours .day-time {
-        display: flex;
-        flex-direction: row;
-        justify-content: space-between;
-
-        .day, .hour { justify-content: space-between } 
-    }
-
-    .location {
-        flex-direction: column;
-        .address { padding: 5px 15px; }
-        iframe.map { 
-            width: 100%; 
-            height: 300px; 
-            position:relative; 
-        }
-    }
-
-    .contact-form {
-        .form-control:focus {
-            box-shadow: none;
-            border-color: #2f2f2f;
-        }
-
-        .form-control {
-            border-radius: 3px;
-        }
-
-        button { 
-            background: #0f0f0f;
-            color: #fff;
-            font-family: $header-font;
-            border-radius: 2px;
-            font-size: 1.5rem;
-            padding: 5px;
-            width: 100%;
-        }
-    }
 }
 
 .container-fluid.faq {
@@ -214,5 +169,5 @@ h1, h2, h3 {
 
 .container-fluid.footer {
     height: 300px;
-    background: #0f0f0f;
+    background: $dark-background;
 }
