--- a/layouts/partials/faq.html
+++ b/layouts/partials/faq.html
@@ -1,4 +1,5 @@
-<div class="container-fluid faq">
+<a class="anchor" id="faq_anchor"></a>
+<div id="faq" class="container-fluid faq">
     <div class="header row">
         <div class="col-sm-10 offset-sm-1">
             <h1> FAQs </h1>
