--- a/layouts/partials/aboutus.html
+++ b/layouts/partials/aboutus.html
@@ -1,4 +1,5 @@
-<div class="container about-us">
+<a class="anchor" id="about_anchor"></a>
+<div id="about" class="container about-us">
     <div class="row">
         <div class="about-info my-auto col-md-6 col-sm-5 offset-sm-1 offset-md-0">
             <h2> About Us </h2>
