--- a/layouts/partials/testimonials.html
+++ b/layouts/partials/testimonials.html
@@ -1,4 +1,5 @@
-<div class="container-fluid testimonials">
+<a class="anchor" id="testimonials_anchor"></a>
+<div id="testimonials" class="container-fluid testimonials">
     <div class="row header">
         <div class="col-sm-10 offset-sm-1">
             <h1>Testimonials</h1>
