--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -65,16 +65,16 @@ h1, h2, h3 {
   }
 }
 
-.container.about-us {
-    margin: 50px auto;
+.container-fluid.about-us {
+    margin-bottom: 50px;
 
-    .about-info h2 { 
-        text-align: center; 
-        color: #333;
+    p {
+        text-indent: 2.5rem;
     }
+
     .about-img { 
-        img { max-height: 300px; } 
         text-align: center; 
+        img { box-shadow: 0px 4px 6px 0px #aaa; }
     }
 }
 
