--- a/layouts/partials/aboutus.html
+++ b/layouts/partials/aboutus.html
@@ -1,11 +1,15 @@
 <a class="anchor" id="about_anchor"></a>
-<div id="about" class="container about-us">
+<div id="about" class="container-fluid about-us">
+    <div class="row header">
+        <div class="col-sm-10 offset-sm-1">
+            <h1> About Us </h1>
+        </div>
+    </div>
     <div class="row">
-        <div class="about-info my-auto col-md-6 col-sm-5 offset-sm-1 offset-md-0">
-            <h2> About Us </h2>
+        <div class="about-info my-auto col-md-6 col-sm-6 offset-sm-1 offset-md-0">
             <p>{{ .AboutText }}</p>
         </div>
-        <div class="about-img col-md-6 col-sm-5 offset-sm-1 my-auto offset-md-0">
+        <div class="about-img col-md-6 col-sm-4 my-auto">
             <img class="about-img img-fluid" src="{{ .AboutImage }}" alt="{{.AboutAlt}}" />
         </div>
     </div>
