layout for artists and about us update

--- a/assets/sass/main.scss
+++ b/assets/sass/main.scss
@@ -156,7 +156,7 @@ h1, h2, h3 {
     padding: 20px 30px;
 
     .artist-gallery {
-        padding: 1vw;
+        margin: 35px 0;
     }
     
     * { color: #fff; } 
