--- a/layouts/partials/artists.html
+++ b/layouts/partials/artists.html
@@ -11,13 +11,17 @@
     {{ range $index, $artist := .Artists }}
     <div id="{{$artist.Slug}}" class="artist-about collapse {{ (cond (eq $index 0) "show" "") }}" data-parent="#artists">
         <div class="row">
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-lg-4 offset-lg-2 offset-sm-0">
                 <h3> {{$artist.Name }} </h3>
                 <img class="img-fluid" alt="{{$artist.Name}} image" src="/images/artists/{{$artist.Slug}}/{{ $artist.PortraitImageName }}"/>
             </div>
-            <div class="col-sm-6">
+            <div class="col-sm-6 col-lg-4">
                 <h5> About </h5>
                 <p> {{$artist.About}} </p>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-sm-12 col-lg-8 offset-lg-2 offset-sm-0">
                 <div class="artist-gallery gallery">
                 {{ range $img := .Images }}
                     <img src="/images/artists/{{$artist.Slug}}/{{$img.Name}}" alt="{{$img.Alt}}" width="100%" height="auto" class="gallery-img" />		
