--- a/layouts/partials/aboutus.html
+++ b/layouts/partials/aboutus.html
@@ -6,10 +6,10 @@
         </div>
     </div>
     <div class="row">
-        <div class="about-info my-auto col-md-6 col-sm-6 offset-sm-1 offset-md-0">
+        <div class="about-info my-auto col-lg-4 col-md-6 col-sm-6 offset-sm-1 offset-md-0 offset-lg-2">
             <p>{{ .AboutText }}</p>
         </div>
-        <div class="about-img col-md-6 col-sm-4 my-auto">
+        <div class="about-img  col-lg-2 offset-lg-1 offset-md-0 col-md-6 col-sm-4 my-auto">
             <img class="about-img img-fluid" src="{{ .AboutImage }}" alt="{{.AboutAlt}}" />
         </div>
     </div>
