updated readme hugoized hours

--- a/themes/moderntattoo/layouts/index.html
+++ b/themes/moderntattoo/layouts/index.html
@@ -8,7 +8,7 @@
         {{ partial "gallery.html" .Site.Data.gallery }}
         {{ partial "testimonials.html" .Site.Data.testimonials }}
         {{ partial "artists.html" .Site.Data.artists }}
-        {{ partial "contact.html" . }}
+        {{ partial "contact.html" .Site.Data.contact }}
         {{ partial "faq.html" .Site.Data.faq }}
         {{ partial "footer.html" . }}
         {{ partial "venderscripts.html" . }}
