--- a/themes/moderntattoo/layouts/index.html
+++ b/themes/moderntattoo/layouts/index.html
@@ -3,7 +3,7 @@
     {{ partial "head.html" . }}
     <body data-spy="scroll" data-target="#main-nav" data-offset="100">
         {{ partial "nav.html" . }}
-        {{ partial "hero.html" . }}
+        {{ partial "hero.html" .Site.Data.hero }}
         {{ partial "aboutus.html" .Site.Data.about }}
         {{ partial "gallery.html" .Site.Data.gallery }}
         {{ partial "testimonials.html" .Site.Data.testimonials }}
