--- a/themes/moderntattoo/layouts/partials/hero.html
+++ b/themes/moderntattoo/layouts/partials/hero.html
@@ -1,8 +1,16 @@
 <section class="hero-area">
+    {{ if .ShowLogo }}
+    <div class="logo hero-content">
+        <div class="content">
+            <img class="img-fluid" src="{{ .LogoImage }}" alt="logo" />
+        </div>
+    </div>
+    {{ else }}
     <div class="hero-content">
         <div class="content">
             <h1> Needle Me </h1>
             <p> Tattoos for you </p>
         </div>
     </div>
+    {{ end }}
 </section>
