--- a/themes/moderntattoo/assets/sass/main.scss
+++ b/themes/moderntattoo/assets/sass/main.scss
@@ -47,7 +47,8 @@ h1, h2, h3 {
 
   padding: 25px;
 
-  background-attachment: fixed;
+  background-attachment: scroll;
+  &.parallax { background-attachment: fixed; }
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
