--- a/themes/moderntattoo/assets/sass/nav.scss
+++ b/themes/moderntattoo/assets/sass/nav.scss
@@ -54,6 +54,10 @@
         img {
             max-width: 80px;
         }
+
+        @media screen and (max-width: 992px) {
+            img { max-width: 60px; }
+        }
     }
 }
 
